Pom changes