@@ -54,9 +54,6 @@
         <configuration>
           <source>${javaVersion}</source>
           <target>${javaVersion}</target>
-          <compilerArgs>
-            --enable-preview
-          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
